[package]
name = "plist_plus"
version = "0.2.6"
edition = "2021"
authors = ["Jackson Coxson"]
description = "A library for reading and writing plists, compatible with libimobiledevice"
homepage = "https://github.com/jkcoxson/plist_plus"
repository = "https://github.com/jkcoxson/plist_plus"
license = "LGPL-2.1-or-later"
keywords = [
  "plist",
  "plist_plus",
  "libimobiledevice",
  "libplist",
  "libplist_plus",
]
readme = "README.md"
documentation = "https://docs.rs/plist_plus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.122"
rand = "0.8.5"
log = "0.4.*"

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"
autotools = "0.2.5"

[features]
pls-generate = []
dynamic = []
static = []
vendored = ["static"]
